[tool]

[project]
name = "python-ember-mug"
readme = "README.md"
description = "Python Library for Ember Mugs."
authors = [
    { name = "Jesse Sopel", email = "jesse.sopel@gmail.com" },
]
license =  "MIT"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    "bleak-retry-connector>=2.13.0",
    "bleak>=0.19.5",
]

[project.optional-dependencies]
test = [
  "pytest>=7.2.1",
  "pytest-cov",
  "pytest-asyncio",
]
docs = [
  "mkdocs>=1.1.21",
  "mkdocs-include-markdown-plugin>=3.6.1,<5.0.0",
  "mkdocs-material>=8.4.1,<10.0.0",
  "mkdocstrings[python]",
  "mkdocs-material-extensions",
  "mkdocs-autorefs",
]

[project.urls]
"Documentation" = "https://sopelj.github.io/python-ember-mug/"
"Source code" = "https://github.com/sopelj/python-ember-mug/"
"Bug Tracker" = "https://github.com/sopelj/python-ember-mug/issues"
"Changelog" = "https://github.com/sopelj/python-ember-mug/blob/main/CHANGELOG.md"

[project.scripts]
ember-mug = "ember_mug.cli:run_cli"

[tool.hatch]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ember_mug/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["ember_mug", "tests"]
exclude = [".gitignore"]

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.test]
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.test.scripts]
cov = "pytest --asyncio-mode=auto --cov=ember_mug --cov-branch --cov-report=xml --cov-report=term-missing tests"
no-cov = "cov --no-cov"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = ['E203', 'E266', 'W503']
docstring-convention = "google"
per-file-ignores = "__init__.py:F401"
min-python-version = 3.9
exclude = [
    ".git",
    "__pycache__",
    "setup.py",
    "build",
    "dist",
    "docs",
    "releases",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".github",
    "tests/*",
]
